<resources>
    <string name="app_name">My Notes pro</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="timestamp">timestamp</string>
    <string name="this_can_be_note_content_that_can_be_long">this can be note content that can be long</string>
    <string name="note_title">note title</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="notes">Notes</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="my_notes_pro">My Notes Pro</string>
    <string name="todow">TODO</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_new_note">Add New Note</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="set_reminder_time">Set Reminder Time</string>
    <string name="set_time">Set Time</string>
    <string name="set_reminder_time_n">Set Reminder Time \n</string>
    <string name="forgetpassword">ForgetPassword</string>
</resources>