<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#299AA8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Homepage">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:text="@string/notes"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_menu_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/menu_btn"/>

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar_layout"
        android:id="@+id/recycler_view"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/todoo"
        android:src="@drawable/baseline_add_24"
        android:id="@+id/add_note_btn"/>

</RelativeLayout>